# lidar_proposal_image_classification

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration/: bounding_box_distance.ipynb  cone_list.txt
config/: camera_parameters_230305.yaml  camera_parameters_real.yaml  camera_parameters_sim.yaml  real.yaml  sim.yaml
include/lidar_proposal_image_classification/: Classifier.hpp  Projector.hpp  common.hpp
launch/: liproic.launch  projection.launch  sim_liproic.launch  sim_projection.launch
src/: Classifier.cpp  Projector.cpp  common.cpp  pcl_projection_node.cpp
